# alttab

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
fonts/: LICENSE-DroidSans
src/: config.rs  font.rs  icons.rs  main.rs  render.rs  toplevel.rs
