[package]
name = "alttab"
version = "0.1.0"
edition = "2021"
description = "Fast alt-tab window switcher for Wayland compositors (Sway)"
license = "MIT"
repository = "https://github.com/e-gautier/alttab"
homepage = "https://github.com/e-gautier/alttab"
readme = "README.md"
keywords = ["wayland", "sway", "window-switcher", "alt-tab", "wlroots"]
categories = ["command-line-utilities"]

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
smithay-client-toolkit = { version = "0.20", features = ["calloop", "xkbcommon"] }
calloop = "0.14"
calloop-wayland-source = "0.4"
tiny-skia = "0.12"
xkbcommon = { version = "0.8", features = ["wayland"] }
xkeysym = "0.2"
nix = { version = "0.29", features = ["signal"] }
png = "0.17"
fontdue = "0.9"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
